File: plugins/nexus-repository-maven/src/test/virtualthread/org/sonatype/nexus/repository/maven/internal/filter/DiskBackedDuplicateDetectionStrategyTest.java