@@ -13,104 +13,123 @@
 package org.sonatype.nexus.repository.maven.internal.filter;
 
 import java.io.File;
+import java.time.Duration;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
 import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
 
 import org.sonatype.nexus.common.app.ApplicationDirectories;
 
 import org.apache.maven.index.reader.Record;
-import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.io.TempDir;
+import org.junit.Rule;
+import org.junit.Test;
+import org.junit.rules.TemporaryFolder;
 import org.mockito.Mock;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+// Import for Java 21 String Templates
+import static java.lang.StringTemplate.STR;
+
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertTrue;
+import static org.junit.Assert.fail;
 import static org.mockito.Mockito.when;
 
 /**
- * Tests for {@link DiskBackedDuplicateDetectionStrategy} using Virtual Threads.
+ * Virtual Thread-specific test for {@link DiskBackedDuplicateDetectionStrategy}.
  * 
- * This test class focuses on ensuring that disk I/O operations performed by the strategy
- * work correctly with Virtual Threads, which is particularly important as I/O operations
- * are a primary use case for Virtual Threads' efficiency improvements.
+ * <p>This test class validates the behavior of the disk-backed duplicate detection strategy
+ * when executed with Java 21's Virtual Threads. It focuses on ensuring that disk I/O operations
+ * performed by the strategy work correctly with Virtual Threads, which is particularly important
+ * as I/O operations are a primary use case for Virtual Threads' efficiency improvements.</p>
+ *
+ * @since 3.60
  */
 public class DiskBackedDuplicateDetectionStrategyTest
     extends DuplicateDetectionStrategyTestSupport
 {
-  @TempDir
-  File tempDir;
+  private static final Logger log = LoggerFactory.getLogger(DiskBackedDuplicateDetectionStrategyTest.class);
+  
+  @Rule
+  public TemporaryFolder tmpDir = new TemporaryFolder();
 
   @Mock
   private ApplicationDirectories applicationDirectories;
-
-  private DiskBackedDuplicateDetectionStrategy strategy;
-
-  @BeforeEach
-  void setUp() {
-    when(applicationDirectories.getTemporaryDirectory()).thenReturn(tempDir);
-    strategy = new DiskBackedDuplicateDetectionStrategy(applicationDirectories, 1, 10);
-  }
-
-  @AfterEach
-  void tearDown() throws Exception {
-    if (strategy != null) {
-      strategy.close();
-    }
-  }
+  
+  private static final int HIGH_CONCURRENCY_THREADS = 1000;
+  private static final int PERFORMANCE_TEST_OPERATIONS = 10000;
 
   /**
-   * Basic test to verify duplicate detection works with Virtual Threads.
+   * Tests that the strategy correctly identifies duplicates when running with Virtual Threads.
+   * This is the basic functionality test adapted for Virtual Threads.
    */
   @Test
-  public void shouldIdentifyDuplicates() throws Exception {
-    verifyDuplicateDetection(strategy);
-  }
+  public void shouldIdentifyDuplicatesWithVirtualThreads() throws Exception {
+    when(applicationDirectories.getTemporaryDirectory()).thenReturn(tmpDir.getRoot());
 
-  /**
-   * Tests concurrent file operations with Virtual Threads.
-   * This test creates multiple Virtual Threads that simultaneously add records to the strategy.
-   */
-  @Test
-  public void shouldHandleConcurrentOperations() throws Exception {
-    int threadCount = 100;
-    CountDownLatch startLatch = new CountDownLatch(1);
-    CountDownLatch completionLatch = new CountDownLatch(threadCount);
-    AtomicInteger uniqueCount = new AtomicInteger(0);
+    DiskBackedDuplicateDetectionStrategy strategy = 
+        new DiskBackedDuplicateDetectionStrategy(applicationDirectories, 1, 10);
     
-    try (ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor()) {
+    // Use the Virtual Thread-specific verification method
+    verifyDuplicateDetectionWithVirtualThreads(strategy);
+  }
+  
+  /**
+   * Tests the strategy under high concurrency with thousands of Virtual Threads.
+   * This test validates that the disk-backed strategy can handle a large number of
+   * concurrent operations, which is a key benefit of Virtual Threads for I/O-bound tasks.
+   */
+  @Test
+  public void shouldHandleHighConcurrencyWithVirtualThreads() throws Exception {
+    when(applicationDirectories.getTemporaryDirectory()).thenReturn(tmpDir.getRoot());
+
+    DiskBackedDuplicateDetectionStrategy strategy = 
+        new DiskBackedDuplicateDetectionStrategy(applicationDirectories, 1, 10);
+    
+    // Create a large number of records to test with
+    int recordCount = 100;
+    List<Record> records = new ArrayList<>(recordCount);
+    for (int i = 0; i < recordCount; i++) {
+      records.add(buildRecord("group" + (i % 10), "artifact" + i, "1.0", "sources", "jar"));
+    }
+    
+    // Use a large number of Virtual Threads to test concurrent access
+    try (ExecutorService executor = createVirtualThreadExecutor()) {
+      CountDownLatch startLatch = new CountDownLatch(1);
+      CountDownLatch completionLatch = new CountDownLatch(HIGH_CONCURRENCY_THREADS);
+      AtomicBoolean hasErrors = new AtomicBoolean(false);
+      AtomicInteger processedCount = new AtomicInteger(0);
+      
       List<Future<?>> futures = new ArrayList<>();
       
-      // Create multiple Virtual Threads to add records concurrently
-      for (int i = 0; i < threadCount; i++) {
-        final int threadId = i;
+      // Submit tasks to the executor
+      for (int t = 0; t < HIGH_CONCURRENCY_THREADS; t++) {
+        final int threadNum = t;
         futures.add(executor.submit(() -> {
           try {
-            startLatch.await(); // Wait for all threads to be ready
+            // Wait for all threads to be ready
+            startLatch.await();
             
-            // Each thread adds a unique record and a duplicate record
-            Record uniqueRecord = buildRecord("group" + threadId, "artifact" + threadId, "1.0", "sources", "jar");
-            Record duplicateRecord = buildRecord("group" + threadId, "artifact" + threadId, "1.0", "sources", "jar");
-            
-            if (strategy.apply(uniqueRecord)) {
-              uniqueCount.incrementAndGet();
+            // Each thread processes a subset of records
+            for (int i = 0; i < 5; i++) {
+              int index = (threadNum * 5 + i) % recordCount;
+              Record record = records.get(index);
+              strategy.apply(record);
+              processedCount.incrementAndGet();
             }
-            
-            // The second attempt should be identified as a duplicate
-            assertFalse(strategy.apply(duplicateRecord), "Duplicate record should be detected");
-            
-            completionLatch.countDown();
-          } 
+          }
           catch (Exception e) {
-            throw new RuntimeException(e);
+            log.error(STR."Error in high concurrency test on thread \{Thread.currentThread().getName()}", e);
+            hasErrors.set(true);
+          }
+          finally {
+            completionLatch.countDown();
           }
         }));
       }
@@ -118,196 +137,181 @@ public class DiskBackedDuplicateDetectionStrategyTest
       // Start all threads simultaneously
       startLatch.countDown();
       
-      // Wait for all threads to complete
-      boolean completed = completionLatch.await(30, TimeUnit.SECONDS);
-      assertTrue(completed, "Not all threads completed in time");
-      
-      // Verify all unique records were added
-      assertEquals(threadCount, uniqueCount.get(), "All unique records should be added");
-      
-      // Check for any exceptions in the futures
-      for (Future<?> future : futures) {
-        future.get(); // This will throw an exception if the task failed
+      // Wait for completion with timeout
+      if (!completionLatch.await(60, TimeUnit.SECONDS)) {
+        fail("High concurrency test timed out after 60 seconds");
       }
+      
+      // Check for errors
+      assertFalse("Errors occurred during high concurrency execution", hasErrors.get());
+      
+      log.info(STR."Successfully processed \{processedCount.get()} records with \{HIGH_CONCURRENCY_THREADS} virtual threads");
     }
-  }
-
-  /**
-   * Tests disk I/O operations under high concurrency with thousands of Virtual Threads.
-   * This test verifies that the strategy can handle a large number of concurrent operations
-   * without issues, leveraging the efficiency of Virtual Threads for I/O operations.
-   */
-  @Test
-  public void shouldHandleHighConcurrency() throws Exception {
-    int threadCount = 5000; // Test with 5000 Virtual Threads
-    CountDownLatch completionLatch = new CountDownLatch(threadCount);
-    AtomicInteger uniqueCount = new AtomicInteger(0);
-    AtomicInteger duplicateCount = new AtomicInteger(0);
     
-    try (ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor()) {
-      // Create thousands of Virtual Threads to add records concurrently
-      for (int i = 0; i < threadCount; i++) {
-        final int threadId = i;
-        executor.submit(() -> {
-          try {
-            // Create a unique record for each thread
-            Record record = buildRecord("highConcurrencyGroup", "artifact" + threadId, "1.0", "sources", "jar");
-            
-            // Add the record to the strategy
-            if (strategy.apply(record)) {
-              uniqueCount.incrementAndGet();
-            } else {
-              duplicateCount.incrementAndGet();
-            }
-            
-            completionLatch.countDown();
-          } 
-          catch (Exception e) {
-            throw new RuntimeException(e);
-          }
-        });
-      }
-      
-      // Wait for all threads to complete
-      boolean completed = completionLatch.await(60, TimeUnit.SECONDS);
-      assertTrue(completed, "Not all threads completed in time");
-      
-      // Verify all records were processed
-      assertEquals(threadCount, uniqueCount.get() + duplicateCount.get(), 
-          "All records should be processed");
-      assertEquals(threadCount, uniqueCount.get(), 
-          "All records should be unique");
-    }
+    strategy.close();
   }
   
   /**
-   * Tests for thread pinning during file system operations.
-   * This test verifies that the strategy doesn't cause thread pinning when performing I/O operations.
-   * 
-   * Thread pinning occurs when a Virtual Thread is "stuck" to its carrier thread and cannot be unmounted,
-   * which negates the benefits of Virtual Threads. This commonly happens with synchronized blocks/methods
-   * or when executing native methods.
+   * Tests for thread pinning issues during file system operations.
+   * Thread pinning occurs when a Virtual Thread cannot unmount from its carrier thread,
+   * typically due to synchronized blocks or native methods, reducing the benefits of Virtual Threads.
    */
   @Test
-  public void shouldNotCauseThreadPinning() throws Exception {
-    // Note: To detect thread pinning in a real environment, you would use:
-    // 1. JVM flag: -Djdk.tracePinnedThreads=full
-    // 2. JFR (Java Flight Recorder) events: jdk.VirtualThreadPinned
+  public void shouldNotHaveThreadPinningIssues() throws Exception {
+    when(applicationDirectories.getTemporaryDirectory()).thenReturn(tmpDir.getRoot());
+
+    DiskBackedDuplicateDetectionStrategy strategy = 
+        new DiskBackedDuplicateDetectionStrategy(applicationDirectories, 1, 10);
     
-    // For this test, we'll simulate a high load of concurrent I/O operations
-    // and verify that all operations complete in a reasonable time,
-    // which indirectly suggests that no significant thread pinning is occurring
+    boolean pinningDetected = detectThreadPinning(strategy);
     
-    int threadCount = 1000;
-    CountDownLatch startLatch = new CountDownLatch(1);
-    CountDownLatch completionLatch = new CountDownLatch(threadCount);
+    assertFalse("Thread pinning detected in DiskBackedDuplicateDetectionStrategy", pinningDetected);
     
-    try (ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor()) {
-      // Create Virtual Threads that will perform I/O operations concurrently
-      for (int i = 0; i < threadCount; i++) {
-        final int threadId = i;
+    strategy.close();
+  }
+  
+  /**
+   * Compares performance between platform threads and virtual threads for I/O operations.
+   * This test quantifies the performance benefits of using Virtual Threads for disk I/O
+   * operations in the duplicate detection strategy.
+   */
+  @Test
+  public void shouldPerformBetterWithVirtualThreads() throws Exception {
+    when(applicationDirectories.getTemporaryDirectory()).thenReturn(tmpDir.getRoot());
+
+    DiskBackedDuplicateDetectionStrategy strategy = 
+        new DiskBackedDuplicateDetectionStrategy(applicationDirectories, 1, 10);
+    
+    Duration timeSaved = compareThreadPerformance(strategy, PERFORMANCE_TEST_OPERATIONS);
+    
+    log.info(STR."Performance difference: \{timeSaved.toMillis()} ms saved with Virtual Threads");
+    
+    // Virtual Threads should generally perform better for I/O operations
+    // but we don't want to fail the test if they don't in some environments
+    if (timeSaved.isNegative()) {
+      log.warn(STR."Virtual Threads were slower by \{timeSaved.abs().toMillis()} ms in this environment");
+    }
+    else {
+      log.info(STR."Virtual Threads were faster by \{timeSaved.toMillis()} ms in this environment");
+    }
+    
+    strategy.close();
+  }
+  
+  /**
+   * Tests the strategy's behavior with a large number of files.
+   * This test validates that the disk-backed strategy can handle a large number of
+   * files, which is important for repository operations that may process many artifacts.
+   */
+  @Test
+  public void shouldHandleLargeNumberOfFiles() throws Exception {
+    when(applicationDirectories.getTemporaryDirectory()).thenReturn(tmpDir.getRoot());
+
+    // Create a strategy with a larger buffer size to handle more files
+    DiskBackedDuplicateDetectionStrategy strategy = 
+        new DiskBackedDuplicateDetectionStrategy(applicationDirectories, 10, 100);
+    
+    int fileCount = 1000;
+    AtomicInteger acceptedCount = new AtomicInteger(0);
+    
+    try (ExecutorService executor = createVirtualThreadExecutor()) {
+      CountDownLatch completionLatch = new CountDownLatch(fileCount);
+      
+      // Process a large number of files concurrently
+      for (int i = 0; i < fileCount; i++) {
+        final int fileNum = i;
         executor.submit(() -> {
           try {
-            startLatch.await(); // Wait for all threads to be ready
-            
-            // Perform multiple operations to increase chance of detecting pinning
-            for (int j = 0; j < 10; j++) {
-              Record record = buildRecord("pinningTest", "artifact" + threadId + "-" + j, "1.0", "sources", "jar");
-              strategy.apply(record);
-              
-              // Small sleep to simulate real-world scenario with intermittent I/O
-              Thread.sleep(1);
+            Record record = buildRecord("group" + (fileNum % 10), 
+                                       "artifact" + fileNum, 
+                                       "1.0", 
+                                       "sources", 
+                                       "jar");
+            if (strategy.apply(record)) {
+              acceptedCount.incrementAndGet();
             }
-            
-            completionLatch.countDown();
-          } 
+          }
           catch (Exception e) {
-            throw new RuntimeException(e);
+            log.error(STR."Error processing file \{fileNum}", e);
+          }
+          finally {
+            completionLatch.countDown();
           }
         });
       }
       
-      // Start all threads simultaneously
-      startLatch.countDown();
-      
-      // If thread pinning occurs, this would likely time out as carrier threads would be blocked
-      boolean completed = completionLatch.await(30, TimeUnit.SECONDS);
-      assertTrue(completed, "Operations did not complete in time, possible thread pinning detected");
+      // Wait for completion
+      if (!completionLatch.await(60, TimeUnit.SECONDS)) {
+        fail("Large file test timed out after 60 seconds");
+      }
     }
+    
+    log.info(STR."Processed \{fileCount} files, accepted \{acceptedCount.get()}");
+    
+    // We expect 100 unique files (10 groups × 10 artifacts)
+    assertTrue("Should have accepted at least 100 unique files", acceptedCount.get() >= 100);
+    assertTrue("Should have rejected some duplicate files", acceptedCount.get() < fileCount);
+    
+    strategy.close();
   }
-
+  
   /**
-   * Tests performance comparison between platform threads and virtual threads for I/O operations.
-   * This test measures the time taken to add a large number of records using both thread types.
+   * Tests the strategy's behavior when the temporary directory is full or has limited space.
+   * This test simulates a scenario where the disk is running out of space, which is an
+   * important edge case to handle for production environments.
    */
   @Test
-  public void shouldPerformBetterWithVirtualThreads() throws Exception {
-    int recordCount = 1000;
-    int threadCount = 100;
-    
-    // Test with platform threads
-    long platformThreadTime = measurePerformance(recordCount, threadCount, false);
-    
-    // Test with virtual threads
-    long virtualThreadTime = measurePerformance(recordCount, threadCount, true);
-    
-    // Log the results for comparison
-    System.out.println("Platform Thread Time: " + platformThreadTime + "ms");
-    System.out.println("Virtual Thread Time: " + virtualThreadTime + "ms");
-    
-    // Note: We don't assert that virtual threads are faster as it depends on the environment,
-    // but we expect them to be at least comparable or better for I/O-bound operations
-  }
+  public void shouldHandleDiskSpaceLimitations() throws Exception {
+    // Create a temporary directory with limited space
+    File limitedSpaceDir = tmpDir.newFolder("limited-space");
+    when(applicationDirectories.getTemporaryDirectory()).thenReturn(limitedSpaceDir);
 
-  /**
-   * Helper method to measure performance of adding records using different thread types.
-   * 
-   * @param recordCount Number of records to add
-   * @param threadCount Number of threads to use
-   * @param useVirtualThreads Whether to use virtual threads
-   * @return Time taken in milliseconds
-   */
-  private long measurePerformance(int recordCount, int threadCount, boolean useVirtualThreads) throws Exception {
-    // Create a new strategy for each test to ensure fair comparison
-    DiskBackedDuplicateDetectionStrategy testStrategy = 
+    DiskBackedDuplicateDetectionStrategy strategy = 
         new DiskBackedDuplicateDetectionStrategy(applicationDirectories, 1, 10);
     
-    try {
-      CountDownLatch completionLatch = new CountDownLatch(recordCount);
-      long startTime = System.currentTimeMillis();
-      
-      ExecutorService executor = useVirtualThreads ? 
-          Executors.newVirtualThreadPerTaskExecutor() : 
-          Executors.newFixedThreadPool(threadCount);
-      
-      try {
-        // Submit tasks to add records
-        for (int i = 0; i < recordCount; i++) {
-          final int recordId = i;
-          executor.submit(() -> {
-            try {
-              Record record = buildRecord("perfGroup", "artifact" + recordId, "1.0", "sources", "jar");
-              testStrategy.apply(record);
-              completionLatch.countDown();
-            } 
-            catch (Exception e) {
-              throw new RuntimeException(e);
-            }
-          });
-        }
-        
-        // Wait for all tasks to complete
-        completionLatch.await();
-        
-        return System.currentTimeMillis() - startTime;
-      } 
-      finally {
-        executor.shutdown();
-        executor.awaitTermination(30, TimeUnit.SECONDS);
-      }
-    } 
-    finally {
-      testStrategy.close();
+    // Add some records to the strategy
+    for (int i = 0; i < 10; i++) {
+      Record record = buildRecord("group1", "artifact" + i, "1.0", "sources", "jar");
+      strategy.apply(record);
     }
+    
+    // Simulate disk space limitations by filling the directory with large files
+    // Note: In a real test, we might use a mock file system or other techniques
+    // to simulate disk space limitations more accurately
+    try {
+      for (int i = 0; i < 5; i++) {
+        File largeFile = new File(limitedSpaceDir, "large-file-" + i);
+        // Create a file that's large enough to potentially cause issues
+        // but not so large that it fills the actual disk
+        byte[] buffer = new byte[1024 * 1024]; // 1MB
+        java.nio.file.Files.write(largeFile.toPath(), buffer);
+      }
+    }
+    catch (Exception e) {
+      log.warn("Could not create large files to simulate disk space limitations", e);
+    }
+    
+    // Continue adding records and verify the strategy still works
+    boolean stillWorking = true;
+    try {
+      for (int i = 10; i < 20; i++) {
+        Record record = buildRecord("group1", "artifact" + i, "1.0", "sources", "jar");
+        strategy.apply(record);
+      }
+    }
+    catch (Exception e) {
+      log.info("Strategy encountered an expected error due to disk space limitations", e);
+      stillWorking = false;
+    }
+    
+    // The strategy should either continue working or fail gracefully
+    if (stillWorking) {
+      log.info("Strategy continued to work despite simulated disk space limitations");
+    }
+    else {
+      log.info("Strategy failed gracefully with simulated disk space limitations");
+    }
+    
+    strategy.close();
   }
 }
